--- a/videoPlayer.html
+++ b/videoPlayer.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>选择视频文件</h1>
-    <form action="player.php" method="post" enctype="multipart/form-data">
+    <form action="videoPlayer.php" method="post" enctype="multipart/form-data">
         <input type="file" name="video" accept="video/*" required>
         <input type="submit" value="确定">
     </form>
